/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.map.v1;

option java_package = "io.atomix.api.map.v1";
option java_outer_classname = "MapV1";
option java_multiple_files = true;

import "google/protobuf/duration.proto";
import "v1/primitive.proto";
import "gogoproto/gogo.proto";

// Map is a service for a map primitive
service Map {
    // Create creates the map
    rpc Create (CreateRequest) returns (CreateResponse);

    // Close closes the map
    rpc Close (CloseRequest) returns (CloseResponse);

    // Size returns the size of the map
    rpc Size (SizeRequest) returns (SizeResponse);

    // Put puts an entry into the map
    rpc Put (PutRequest) returns (PutResponse);

    // Insert inserts an entry into the map
    rpc Insert (InsertRequest) returns (InsertResponse);

    // Update updates an entry in the map
    rpc Update (UpdateRequest) returns (UpdateResponse);

    // Get gets the entry for a key
    rpc Get (GetRequest) returns (GetResponse);

    // Remove removes an entry from the map
    rpc Remove (RemoveRequest) returns (RemoveResponse);

    // Clear removes all entries from the map
    rpc Clear (ClearRequest) returns (ClearResponse);

    // Lock locks a key in the map
    rpc Lock(LockRequest) returns (LockResponse);

    // Unlock unlocks a key in the map
    rpc Unlock(UnlockRequest) returns (UnlockResponse);

    // Events listens for change events
    rpc Events (EventsRequest) returns (stream EventsResponse);

    // Entries lists all entries in the map
    rpc Entries (EntriesRequest) returns (stream EntriesResponse);
}

message CreateRequest {
    atomix.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    repeated string tags = 2;
}

message CreateResponse {

}

message CloseRequest {
    atomix.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
}

message CloseResponse {

}

message SizeRequest {
    atomix.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
}

message SizeResponse {
    uint32 size = 1;
}

message PutRequest {
    atomix.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    string key = 2;
    bytes value = 3;
    google.protobuf.Duration ttl = 4 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
    uint64 prev_version = 5;
}

message PutResponse {
    uint64 version = 1;
    VersionedValue prev_value = 2;
}

message InsertRequest {
    atomix.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    string key = 2;
    bytes value = 3;
    google.protobuf.Duration ttl = 4 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
}

message InsertResponse {
    uint64 version = 1;
}

message UpdateRequest {
    atomix.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    string key = 2;
    bytes value = 3;
    google.protobuf.Duration ttl = 4 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
    uint64 prev_version = 5;
}

message UpdateResponse {
    uint64 version = 1;
    VersionedValue prev_value = 2 [
        (gogoproto.nullable) = false
    ];
}

message GetRequest {
    atomix.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    string key = 2;
}

message GetResponse {
    VersionedValue value = 1 [
        (gogoproto.nullable) = false
    ];
}

message RemoveRequest {
    atomix.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    string key = 2;
    uint64 prev_version = 3;
}

message RemoveResponse {
    VersionedValue value = 1 [
        (gogoproto.nullable) = false
    ];
}

message ClearRequest {
    atomix.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
}

message ClearResponse {

}

message LockRequest {
    atomix.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    repeated string keys = 2;
    google.protobuf.Duration timeout = 3 [
        (gogoproto.stdduration) = true
    ];
}

message LockResponse {

}

message UnlockRequest {
    atomix.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    repeated string keys = 2;
}

message UnlockResponse {

}

message EntriesRequest {
    atomix.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    bool watch = 2;
}

message EntriesResponse {
    Entry entry = 1 [
        (gogoproto.nullable) = false
    ];
}

message EventsRequest {
    atomix.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    string key = 2;
}

message EventsResponse {
    Event event = 2 [
        (gogoproto.nullable) = false
    ];
}

message Event {
    string key = 1;

    oneof event {
        Inserted inserted = 2;
        Updated updated = 3;
        Removed removed = 4;
    }

    message Inserted {
        VersionedValue value = 1 [
            (gogoproto.nullable) = false
        ];
    }

    message Updated {
        VersionedValue value = 1 [
            (gogoproto.nullable) = false
        ];
        VersionedValue prev_value = 2 [
            (gogoproto.nullable) = false
        ];
    }

    message Removed {
        VersionedValue value = 1 [
            (gogoproto.nullable) = false
        ];
        bool expired = 2;
    }
}

message Entry {
    string key = 1;
    VersionedValue value = 2;
}

message VersionedValue {
    bytes value = 1;
    uint64 version = 2;
}
